getting _work to work

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,10 @@ defaults:
       path: '_posts'
     values:
       permalink: /blog/:slug
+  - scope:
+      path: '_work'
+    values:
+      permalink: /work/:slug
 
 
 include:
